it looks like with recent improvements in the test additional memory is no longer needed